Fix units, header order, color contrast 1

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Link attributes */
 a:link { color: #b3c565; }
 a:visited { color: #b3c565; }
@@ -19,7 +18,6 @@ h1 {
 h2 {
   font-family: "Georgia", sans-serif;
   font-size: 28px;
-  font-weight: 10px;
   line-height: 1.5px
 }
 
@@ -49,14 +47,13 @@ footer {
 }
 
 header, footer {
-  background: #e9902e;
+  background: #e27c0c;
   color: white;
 }
 
 header {
   margin: 0;
   padding: 5% 0;
-  height: 80;
 }
 
 main {
@@ -64,7 +61,7 @@ main {
 }
 
 nav {
-  font-size: 24;
+  font-size: 18px;
 }
 
 section {
